@@ -2,6 +2,18 @@
 
         Reviewed by Simon.
 
+        Fixes: compile with QT_NO_SHORTCUT
+        
+
+        * Api/qwebpage.cpp:
+        (QWebPagePrivate::mouseMoveEvent):
+        (QWebPagePrivate::mouseReleaseEvent):
+        (QWebPagePrivate::dragMoveEvent):
+
+2008-08-15  Håvard Wall  <hwall@trolltech.com>
+
+        Reviewed by Simon.
+
         Fixes:    compile with QT_NO_CONTEXTMENU
         
 
